<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/menu_create_account" />
        <item
            android:id="@+id/nav_show_information"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_show_information" />
        <item
            android:id="@+id/nav_show_account"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_show_account" />
        <item
            android:id="@+id/nav_select_account"
            android:icon="@drawable/ic_baseline_check_box_24"
            android:title="@string/menu_select_account" />
    </group>
</menu>