<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testing.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_show_information"
            app:destination="@id/nav_show_information" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_account"
        android:name="com.example.testing.CreateAccountFragment"
        android:label="@string/menu_create_account"
        tools:layout="@layout/fragment_create_account" >
        <action
            android:id="@+id/action_nav_create_account_to_nav_show_account"
            app:destination="@id/nav_show_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_information"
        android:name="com.example.testing.ShowInformationFragment"
        android:label="@string/menu_show_information"
        tools:layout="@layout/fragment_show_information" >
        <action
            android:id="@+id/action_nav_show_information_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_show_information_to_nav_create_account"
            app:destination="@id/nav_create_account" />
    </fragment>
    <fragment
        android:id="@+id/nav_show_account"
        android:name="com.example.testing.ShowAccountFragment"
        android:label="fragment_show_account"
        tools:layout="@layout/fragment_show_account" />

    <fragment
        android:id="@+id/nav_select_account"
        android:name="com.example.testing.SelectAccountFragment"
        android:label="fragment_select_account"
        tools:layout="@layout/fragment_select_account" />
</navigation>